@@ -5,11 +5,10 @@ import java.awt.event.ActionListener;
 import java.awt.image.BufferedImage;
 import java.io.IOException;
 
-import javax.swing.*;
+import javax.swing.JButton;
 
 import edu.colorado.phet.common.phetcommon.util.PhetUtilities;
 import edu.colorado.phet.common.phetcommon.view.util.ImageLoader;
-import edu.colorado.phet.common.phetcommon.view.util.SimStrings;
 import edu.colorado.phet.common.phetcommon.view.util.SwingUtils;
 import edu.colorado.phet.lasers.controller.PhotoWindow;
 
@@ -21,7 +20,7 @@ public class ShowActualButton extends JButton {
     private static PhotoWindow photoWindow;
 
     public ShowActualButton() {
-        super( SimStrings.getInstance().getString( "Misc.ActualPixBtn.label" ) );
+        super( DischargeLampsResources.getString( "Misc.ActualPixBtn.label" ) );
         addActionListener( new ActionListener() {
 
             public void actionPerformed( ActionEvent e ) {
