@@ -1,3 +1,4 @@
+1-9-2009: #1082, delete SimString from discharge-lamps
 10-13-2008: fix all string files to use discharge-lamps.name and discharge-lamps.description
 10-13-2008: replace ImageLoader with PhetResources
 10-13-2008: switch to PhetApplication constructor that takes a PhetApplicationConfig
